# reservai-demo-strands-agents

./: .env.example  .gitignore  Dockerfile  README.md  agent.py  main.py  pyproject.toml  railway.json  server.py
app/: config.py  main.py
app/agent/: manager.py  prompts.py  tools.py
app/database/: dynamodb_client.py  reservation_repository.py
app/middleware/: validation.py
infrastructure/: dynamodb.tf
notebooks/: demo_test.ipynb  test_agent.ipynb
scripts/: seed_half_slots.py
