[project]
name = "reservai-demo-strands-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bedrock-agentcore>=1.2.1",
    "boto3>=1.42.45",
    "botocore>=1.42.45",
    "fastapi>=0.128.6",
    "gunicorn>=25.0.3",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "strands-agents>=1.25.0",
    "strands-agents-tools>=0.2.20",
    "twilio>=9.10.1",
    "uvicorn[standard]>=0.40.0",
]
